# AbstraBird

./: AbstraBird.h  Bird.cpp  Bird.h  CMakeLists.txt  DeltaTimer.h  Floor.h  Game.cpp  Game.h  GameFabric.h  GameLogic.cpp  GameLogic.h  IDrawable.h  IInitable.h  IIntersects.h  IMovable.h  IRenderable.h  IUpdate.h  InputListener.cpp  InputListener.h  Obstacle.cpp  Obstacle.h  ObstacleSet.cpp  ObstacleSet.h  Pipe.cpp  Pipe.h  Pipes.h  README.md  RectBird.h  Renderer.cpp  Renderer.h  Rng.h  Score.h  SquareMovingObject.cpp  SquareMovingObject.h  SquareObject.cpp  SquareObject.h  Window.cpp  Window.h  Windows.h  dirmanager.h  (+1 more)
SDL-bindings/: bindings.h
gui/: ClickReact.h  FileLoader.h  GWindow.cpp  GWindow.h  InteractiveRectGetter.h  button.h  controller.cpp  controller.h  font.h  mvc.h  observer.h  saveTexture.h
mainGame/headers/: AbstraBird.h  DeltaTimer.h  Game.h  GameFabric.h  IInitable.h  IIntersects.h  IResetable.h  IUpdate.h  Levels.h  Pipes.h  Rng.h  SquareMovingObject.h  Window.h  Windows.h  runGame.h
mainGame/src/: Obstacle.cpp  SquareMovingObject.cpp
